# repo-harness-creator

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  action.yml  current-state.md  feature_list.json  init.ps1  init.sh  pins.toml  progress.md  pyproject.toml  session-handoff.md
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  ci.yml.disabled  harness-self-heal.yml  harness-self-heal.yml.disabled
docs/: action.md  capabilities.md  installation.md  roadmap.md  usage.md
docs/harness/: README.md  agent-operating-model.md  authoritative-facts.md  change-contract.md  clean-state-checklist.md  component-inventory.md  dependency-change-policy.md  effectiveness-eval-contract.md  effectiveness-evidence-example.json  effectiveness-evidence.schema.json  entropy-control.md  evaluator-rubric.md  evidence-log.md  feature-list.schema.json  feature-privacy-labels.json  first-agent-task.md  manifest.json  multi-agent-orchestration.md  quality-document.md  reference-mining-notes.md  release-controls.md  remaining-ideas-research.md  research-inbox.md  research-sources.json  research-sources.lock.json  security-boundary-map.md  self-healing.md  (+6 more)
scripts/: analyze_large_public_repos.py  check_pins.py  normalize_token_trace.py  refresh_public_repo_corpus.py  refresh_research.py
tests/: test_cli.py  test_detect.py  test_doctor_redact.py  test_feature_state.py  test_generate_audit.py  test_github_action.py  test_large_public_repo_analysis.py  test_local_entrypoints.py  test_maturity.py  test_pins.py  test_public_repo_corpus.py  test_refresh_research.py  test_token_economics.py  test_verify_contract.py
(+208 files in other folders)
